# justify

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.sh  docker-compose.yml  test.sh
.github/workflows/: bump-homebrew.yml  test.yml
doc/: justify.1
include/: linebuffer.h  strlcat.h  word.h
src/: linebuffer.c  linebuffer.h  main.c  strlcat.c  strlcat.h  word.c  word.h
tests/: CMakeLists.txt  justify.bats  test_linebuffer.c  test_word.c
